fix: [CDS-47627]: dynamicPopover hiding behind side navbar (#12762)

--- a/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionStageDetails/ExecutionStageDetails.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionStageDetails/ExecutionStageDetails.module.scss
@@ -36,7 +36,7 @@
 }
 .popoverHeight {
   min-height: fit-content;
-  margin-left: -20px;
+  z-index: 17 !important;
 }
 
 .graphLink {
